--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/wc-kadowaki/prettier-eslint-settings/issues"
   },
-  "homepage": "https://github.com/wc-kadowaki/prettier-eslint-settings#readme"
+  "homepage": "https://github.com/wc-kadowaki/prettier-eslint-settings#readme",
+  "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1"
+  }
 }
